fix(new-profile): fixed css issues with wrapping of text

--- a/src/app/profile/overview/overview.component.less
+++ b/src/app/profile/overview/overview.component.less
@@ -41,11 +41,12 @@
     font-size: .9em;
   }
   &-name {
+    display: inline-block;
     font-size: 1.6em;
     margin: 0;
   }
   &-username {
-    font-size: .6em;
+    display: inline-block;
     opacity: .8;
   }
 }
